--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     padding: 0;
     overflow-x: hidden;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.265306) 0%, #BDEFCF 100%);
+    width: 1440px;
 }
 
 .nav{
